creating posts and a form for post, installing classnames and dayjs for post

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
+    "dayjs": "^1.11.18",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
