--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@faker-js/faker": "^10.0.0",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.18",
     "next": "15.5.2",
