--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^10.0.0",
+    "@tanstack/react-query": "5",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.18",
     "next": "15.5.2",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
+    "@tanstack/react-query-devtools": "5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
