--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-auth": "5.0.0-beta.29",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-textarea-autosize": "^8.5.9",
     "zod": "^4.1.6"
   },
   "devDependencies": {
