--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-textarea-autosize": "^8.5.9",
-    "zod": "^4.1.6"
+    "zod": "^4.1.6",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
