--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-textarea-autosize": "^8.5.9",
+    "socket.io-client": "4",
     "zod": "^4.1.6",
     "zustand": "^5.0.8"
   },
