--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-auth": "5.0.0-beta.29",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-intersection-observer": "^9.16.0",
     "react-textarea-autosize": "^8.5.9",
     "socket.io-client": "4",
     "zod": "^4.1.6",
