--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@faker-js/faker": "^10.0.0",
     "@tanstack/react-query": "5",
+    "@vanilla-extract/css": "^1.17.4",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.18",
     "next": "15.5.2",
