--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "dev:style": "next dev",
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
